[project]
name = "marketplace-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dbt>=1.0.0.40.15",
    "dbt-core>=1.11.7",
    "duckdb>=1.5.1",
    "pandas>=3.0.1",
    "pandera>=0.30.1",
    "polars>=1.39.3",
    "requests>=2.33.0",
    "sqlalchemy>=2.0.48",
]
